# aio-hub

./: .cursorrules  .env.example  .gitattributes  .gitignore  .oxlintrc.json  .prettierrc  404.html  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CNAME  LICENSE  README.md  TODO.md  aio-hub.code-workspace  build.bat  build.sh  check.sh  danmaku-overlay.html  dev.bat  dev.sh  diff.bat  diff.sh  hashmap.json  index.html  install.sh  package.json  robots.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
.kilo/: package-lock.json
.kilocode/: mcp.json  package-lock.json
Plan/: agent-management-tool-methods.html  ai-novel-studio-investigation.html  app-startup-optimization-investigation.html  app-updater-smart-install-plan.html  docx-image-splitting-plan.html  llm-channel-config-import-plan.html  llm-channel-probe-improvement-plan.html  llm-provider-adapter-sharing-investigation.html  media-generator-parameter-diagnostics.html  mobile-theme-customization.html  model-metadata-system-optimization-plan.html  pipeline-attachment-abstraction.html  ppt-attachment-support-plan.html  sidecar-plugin-data-directory-plan.html  stream-monaco-removal-plan.html  tools-testing-coverage-plan.html  tutorial-completion-plan.html  web-search-grounding.html
architecture/: agent-tool-skill-integration.html  chromium-149-ime-bug.html  composables-overview.html  embedding-infrastructure.html  llm-apis-architecture.html  llm-chat-ui-structure.html  llm-media-infrastructure.html  model-metadata-system.html  overview.html  plugin-async-task-support.html  services-architecture.html  settings-architecture-overview.html  theme-system-architecture.html  tools-architecture-overview.html  transcription-architecture.html  ui-structure-diagram.html  window-sync-architecture.html
assets/: Plan_agent-management-tool-methods.md.BNgJR9qX.js  Plan_agent-management-tool-methods.md.BNgJR9qX.lean.js  Plan_ai-novel-studio-investigation.md.CzPCOBox.js  Plan_ai-novel-studio-investigation.md.CzPCOBox.lean.js  Plan_app-startup-optimization-investigation.md.BV84htCy.js  Plan_app-startup-optimization-investigation.md.BV84htCy.lean.js  Plan_app-startup-optimization-investigation.md.BXHtDc1L.js  Plan_app-startup-optimization-investigation.md.BXHtDc1L.lean.js  Plan_app-startup-optimization-investigation.md.HlraYkSI.js  Plan_app-startup-optimization-investigation.md.HlraYkSI.lean.js  Plan_app-startup-optimization-investigation.md.bKUs3Fwv.js  Plan_app-startup-optimization-investigation.md.bKUs3Fwv.lean.js  Plan_app-updater-smart-install-plan.md.BiYxFWan.js  (+1079 more)
design/: Browser-Connector-design.html  (+12 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  com.mty.aiohub.desktop  com.mty.aiohub.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/wry-overrides/src/webview2/: drag_drop.rs
src-tauri/src/: commands.rs  events.rs  frontend_monitor.rs  knowledge.rs  lib.rs  main.rs  recall.rs  tray.rs  utils.rs  web_distillery.rs  webkit_check.rs
src-tauri/src/commands/: agent_asset_manager.rs  asset_manager.rs  canvas_window.rs  clipboard.rs  config_manager.rs  content_deduplicator.rs  dir_search.rs  directory_janitor.rs  directory_tree.rs  document_converter.rs  external_player.rs  ffmpeg_processor.rs  file_operations.rs  font_list.rs  git_analyzer.rs  git_committer.rs  llm_inspector.rs  llm_proxy.rs  llmchat_search.rs  media_generator_search.rs  mod.rs  native_plugin.rs  ocr.rs  sidecar_plugin.rs  sidecar_plugin_manager.rs  skill_manager.rs  system.rs  system_pulse.rs  video_processor.rs  window_automator.rs  window_config.rs  window_effects.rs  window_manager.rs
src-tauri/src/commands/document_converter/: abiword.rs  config.rs  libreoffice.rs  microsoft_office.rs  microsoft_word.rs  textutil.rs
src-tauri/src/knowledge/: commands.rs  core.rs  index.rs  io.rs  migration_baseline.rs  mod.rs  monitor.rs  ops.rs  search.rs  state.rs  tag_pool.rs  tag_sea.rs  utils.rs
src-tauri/src/knowledge/commands/: backup.rs  base.rs  entry.rs  retrieval_cache.rs  search.rs  tag.rs  vector.rs
src-tauri/src/knowledge/index/: db.rs  inverted_index.rs  vector_matrix.rs
src-tauri/src/knowledge/search/: blender.rs  keyword.rs  lens.rs  vector.rs
src-tauri/src/recall/: core.rs  index.rs  io.rs  migration_baseline.rs  monitor.rs  ops.rs  state.rs  tag_pool.rs  tag_sea.rs  utils.rs
src-tauri/src/recall/commands/: backup.rs  base.rs  entry.rs  retrieval_cache.rs  search.rs  tag.rs  vector.rs
src-tauri/src/recall/index/: db.rs  inverted_index.rs  vector_matrix.rs
src-tauri/src/recall/search/: blender.rs  keyword.rs  lens.rs  vector.rs
src-tauri/src/utils/: mime.rs
src-tauri/src/web_distillery/: crypto.rs  fetcher.rs  proxy.rs  webview.rs
src-tauri/src/web_distillery/inject/: anti-detection.js  api-sniffer.js  bridge.js  resource-proxy.js
(+6112 files in other folders)
