[package]
name = "aiotools"
version = "0.1.5"
description = "All-in-One Tools - 综合工具箱应用"
authors = ["miaotouy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "all_in_one_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = { version = "2" } # Use the same version as main tauri plugin
tauri-plugin-fs = "2" # Add filesystem plugin
tauri-plugin-global-shortcut = "2" # Add global shortcut plugin
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2" # Add dialog plugin
regex = "1"

# LLM代理服务依赖
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots", "gzip", "brotli", "deflate"] }
anyhow = "1"
futures-util = "0.3"
bytes = "1"
http-body-util = "0.1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
flate2 = "1.0"
async-stream = "0.3"

