[package]
name = "aiohub"
version = "0.4.2-beta.3"
description = "AIO Hub - 综合枢纽应用"
authors = ["miaotouy"]
edition = "2021"
license = "MIT"
repository = "https://github.com/miaotouy/aio-hub"
homepage = "https://github.com/miaotouy/aio-hub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aio_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "wry", "tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = { version = "2" } # Use the same version as main tauri plugin
tauri-plugin-fs = "2" # Add filesystem plugin
tauri-plugin-global-shortcut = "2" # Add global shortcut plugin
tauri-plugin-os = "2" # Add OS info plugin
tauri-plugin-log = { version = "2", features = ["colored"] } # Add log plugin
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2" # Add dialog plugin
tauri-plugin-http = "2" # Add http plugin
regex = "1"
url = "2"
urlencoding = "2.1"
dirs-next = "2.0"

# LLM代理服务依赖
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-native-roots", "gzip", "brotli", "deflate"] }
anyhow = "1"
futures-util = "0.3"
bytes = "1"
http-body-util = "0.1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
flate2 = "1.0"
git2 = { version = "0.20", features = ["vendored-openssl"] }
async-stream = "0.3"
rdev = "0.5" # 全局鼠标监听
fs_extra = "1.3" # 文件复制工具
tokio-util = "0.7" # 取消令牌
trash = "5.2" # 安全删除到回收站
lazy_static = "1.4" # 全局静态变量
nanoid = "0.4.0" # 生成唯一ID
zip = { version = "2.2", default-features = false, features = ["deflate"] } # ZIP 压缩
walkdir = "2" # 递归目录遍历
ignore = "0.4" # 高性能并行目录遍历（ripgrep 核心库）
sha2 = "0.10" # SHA-256 哈希计算
image = "0.25" # 图片处理
content_inspector = "0.2" # 文本/二进制内容检测
infer = "0.16" # 文件类型自动检测（基于魔数）
libloading = "0.8" # 动态库加载
scopeguard = "1.2.0"
# 窗口特效依赖
window-vibrancy = "0.5"
raw-window-handle = "0.6"
lofty = "0.22.4"

# OCR 依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Globalization",
] }

# macOS 特定依赖
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

